manifests/lightfamily.photos/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: fam-images
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fam-images
      component: frontend
  template:
    metadata:
      labels:
        app: fam-images
        component: frontend
    spec:
      containers:
      - name: frontend
        image: docker.io/awbsough/frontend:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: fam-images
    component: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: fam-images
    component: frontend
