manifests/lightfamily.photos/storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: fam-images
    component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fam-images
      component: database
  template:
    metadata:
      labels:
        app: fam-images
        component: database
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: fam-images
    component: database
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: fam-images
    component: database
